--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
 # Web Framework
-fastapi>=0.65.0,<0.69.0
-uvicorn>=0.14.0,<0.16.0
-pydantic>=1.8.0,<2.0.0
+flask>=2.0.0
+flask-sqlalchemy>=2.5.0
+flask-login>=0.5.0
+flask-wtf>=0.15.1
+flask-migrate>=3.0.0
+flask-socketio>=5.1.0
+
+# Database
+sqlalchemy>=1.4.0
+psycopg2-binary>=2.9.0
 
 # HTTP Client
-aiohttp>=3.7.4,<4.0.0
+requests>=2.26.0
+aiohttp>=3.7.4
 
 # Environment and Utils
 python-dotenv>=0.19.0
-requests>=2.26.0
+gunicorn>=20.1.0
+
+# Other Dependencies
+pydantic>=1.8.0
+python-jose>=3.3.0
+passlib>=1.7.4
+bcrypt>=3.2.0
 
