--- a/vercel.json
+++ b/vercel.json
@@ -32,6 +32,7 @@
         "FLASK_APP": "wsgi.py",
         "FLASK_ENV": "production",
         "PYTHONPATH": ".",
-        "PORT": "5000"
+        "PORT": "5000",
+        "PYTHONUNBUFFERED": "1"
     }
 } 
