Fix serverless deployment issues

--- a/vercel.json
+++ b/vercel.json
@@ -33,6 +33,9 @@
         "FLASK_ENV": "production",
         "PYTHONPATH": ".",
         "PORT": "5000",
-        "PYTHONUNBUFFERED": "1"
+        "PYTHONUNBUFFERED": "1",
+        "MONGODB_URI": "@mongodb_uri",
+        "WHATSAPP_ACCESS_TOKEN": "@whatsapp_access_token",
+        "WHATSAPP_PHONE_NUMBER_ID": "@whatsapp_phone_number_id"
     }
 } 
